cool.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: class_list
    2        | error

    3 class_list: class
    4           | error ';'
    5           | class_list class
    6           | class_list error ';'

    7 class: CLASS TYPEID '{' optional_feature_list '}' ';'
    8      | CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    9 optional_feature_list: /* empty */
   10                      | feature_list

   11 feature_list: feature ';'
   12             | error ';'
   13             | feature_list feature ';'
   14             | feature_list error ';'

   15 feature: OBJECTID formals ':' TYPEID '{' expr '}'
   16        | OBJECTID ':' TYPEID optional_initialization

   17 optional_initialization: /* empty */
   18                        | ASSIGN expr

   19 formals: '(' ')'
   20        | '(' formal_list ')'
   21        | '(' error ')'

   22 formal_list: formal
   23            | formal_list ',' formal

   24 formal: OBJECTID ':' TYPEID

   25 let_list: OBJECTID ':' TYPEID optional_initialization IN expr
   26         | error IN expr
   27         | OBJECTID ':' TYPEID optional_initialization ',' let_list
   28         | error ',' let_list

   29 expr: OBJECTID ASSIGN expr
   30     | expr '@' TYPEID '.' OBJECTID actuals
   31     | expr '.' OBJECTID actuals
   32     | IF expr THEN expr ELSE expr FI
   33     | WHILE expr LOOP expr POOL
   34     | '{' stmt_list '}'
   35     | LET let_list
   36     | CASE expr OF case_list ESAC
   37     | NEW TYPEID
   38     | ISVOID expr
   39     | expr '+' expr
   40     | expr '-' expr
   41     | expr '*' expr
   42     | expr '/' expr
   43     | '~' expr
   44     | expr '<' expr
   45     | expr '=' expr
   46     | expr LE expr
   47     | NOT expr
   48     | '(' expr ')'
   49     | INT_CONST
   50     | STR_CONST
   51     | BOOL_CONST
   52     | OBJECTID
   53     | OBJECTID actuals

   54 stmt_list: expr ';'
   55          | error ';'
   56          | stmt_list expr ';'
   57          | stmt_list error ';'

   58 actuals: '(' ')'
   59        | '(' exp_list ')'

   60 exp_list: expr
   61         | exp_list ',' expr

   62 case_list: simple_case
   63          | case_list simple_case

   64 simple_case: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 19 20 21 48 58 59
')' (41) 19 20 21 48 58 59
'*' (42) 41
'+' (43) 39
',' (44) 23 27 28 61
'-' (45) 40
'.' (46) 30 31
'/' (47) 42
':' (58) 15 16 24 25 27 64
';' (59) 4 6 7 8 11 12 13 14 54 55 56 57 64
'<' (60) 44
'=' (61) 45
'@' (64) 30
'{' (123) 7 8 15 34
'}' (125) 7 8 15 34
'~' (126) 43
error (256) 2 4 6 12 14 21 26 28 55 57
CLASS (258) 7 8
ELSE (259) 32
FI (260) 32
IF (261) 32
IN (262) 25 26
INHERITS (263) 8
LET (264) 35
LOOP (265) 33
POOL (266) 33
THEN (267) 32
WHILE (268) 33
CASE (269) 36
ESAC (270) 36
OF (271) 36
DARROW (272) 64
NEW (273) 37
ISVOID (274) 38
STR_CONST (275) 50
INT_CONST (276) 49
BOOL_CONST (277) 51
TYPEID (278) 7 8 15 16 24 25 27 30 37 64
OBJECTID (279) 15 16 24 25 27 29 30 31 52 53 64
ASSIGN (280) 18 29
NOT (281) 47
LE (282) 46
ERROR (283)
LET_STMT (285)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1 2, on right: 0
class_list (48)
    on left: 3 4 5 6, on right: 1 5 6
class (49)
    on left: 7 8, on right: 3 5
optional_feature_list (50)
    on left: 9 10, on right: 7 8
feature_list (51)
    on left: 11 12 13 14, on right: 10 13 14
feature (52)
    on left: 15 16, on right: 11 13
optional_initialization (53)
    on left: 17 18, on right: 16 25 27
formals (54)
    on left: 19 20 21, on right: 15
formal_list (55)
    on left: 22 23, on right: 20 23
formal (56)
    on left: 24, on right: 22 23
let_list (57)
    on left: 25 26 27 28, on right: 27 28 35
expr (58)
    on left: 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46
    47 48 49 50 51 52 53, on right: 15 18 25 26 29 30 31 32 33 36 38
    39 40 41 42 43 44 45 46 47 48 54 56 60 61 64
stmt_list (59)
    on left: 54 55 56 57, on right: 34 56 57
actuals (60)
    on left: 58 59, on right: 30 31 53
exp_list (61)
    on left: 60 61, on right: 59 61
case_list (62)
    on left: 62 63, on right: 36 63
simple_case (63)
    on left: 64, on right: 62 63


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    2 program: error .
    4 class_list: error . ';'

    ';'  shift, and go to state 6

    $default  reduce using rule 2 (program)


state 2

    7 class: CLASS . TYPEID '{' optional_feature_list '}' ';'
    8      | CLASS . TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 7


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: class_list .
    5 class_list: class_list . class
    6           | class_list . error ';'

    error  shift, and go to state 9
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 10


state 5

    3 class_list: class .

    $default  reduce using rule 3 (class_list)


state 6

    4 class_list: error ';' .

    $default  reduce using rule 4 (class_list)


state 7

    7 class: CLASS TYPEID . '{' optional_feature_list '}' ';'
    8      | CLASS TYPEID . INHERITS TYPEID '{' optional_feature_list '}' ';'

    INHERITS  shift, and go to state 11
    '{'       shift, and go to state 12


state 8

    0 $accept: program $end .

    $default  accept


state 9

    6 class_list: class_list error . ';'

    ';'  shift, and go to state 13


state 10

    5 class_list: class_list class .

    $default  reduce using rule 5 (class_list)


state 11

    8 class: CLASS TYPEID INHERITS . TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 14


state 12

    7 class: CLASS TYPEID '{' . optional_feature_list '}' ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    '}'  reduce using rule 9 (optional_feature_list)

    optional_feature_list  go to state 17
    feature_list           go to state 18
    feature                go to state 19


state 13

    6 class_list: class_list error ';' .

    $default  reduce using rule 6 (class_list)


state 14

    8 class: CLASS TYPEID INHERITS TYPEID . '{' optional_feature_list '}' ';'

    '{'  shift, and go to state 20


state 15

   12 feature_list: error . ';'

    ';'  shift, and go to state 21


state 16

   15 feature: OBJECTID . formals ':' TYPEID '{' expr '}'
   16        | OBJECTID . ':' TYPEID optional_initialization

    ':'  shift, and go to state 22
    '('  shift, and go to state 23

    formals  go to state 24


state 17

    7 class: CLASS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 25


state 18

   10 optional_feature_list: feature_list .
   13 feature_list: feature_list . feature ';'
   14             | feature_list . error ';'

    error     shift, and go to state 26
    OBJECTID  shift, and go to state 16

    '}'  reduce using rule 10 (optional_feature_list)

    feature  go to state 27


state 19

   11 feature_list: feature . ';'

    ';'  shift, and go to state 28


state 20

    8 class: CLASS TYPEID INHERITS TYPEID '{' . optional_feature_list '}' ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    '}'  reduce using rule 9 (optional_feature_list)

    optional_feature_list  go to state 29
    feature_list           go to state 18
    feature                go to state 19


state 21

   12 feature_list: error ';' .

    $default  reduce using rule 12 (feature_list)


state 22

   16 feature: OBJECTID ':' . TYPEID optional_initialization

    TYPEID  shift, and go to state 30


state 23

   19 formals: '(' . ')'
   20        | '(' . formal_list ')'
   21        | '(' . error ')'

    error     shift, and go to state 31
    OBJECTID  shift, and go to state 32
    ')'       shift, and go to state 33

    formal_list  go to state 34
    formal       go to state 35


state 24

   15 feature: OBJECTID formals . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 36


state 25

    7 class: CLASS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 37


state 26

   14 feature_list: feature_list error . ';'

    ';'  shift, and go to state 38


state 27

   13 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 39


state 28

   11 feature_list: feature ';' .

    $default  reduce using rule 11 (feature_list)


state 29

    8 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 40


state 30

   16 feature: OBJECTID ':' TYPEID . optional_initialization

    ASSIGN  shift, and go to state 41

    $default  reduce using rule 17 (optional_initialization)

    optional_initialization  go to state 42


state 31

   21 formals: '(' error . ')'

    ')'  shift, and go to state 43


state 32

   24 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 44


state 33

   19 formals: '(' ')' .

    $default  reduce using rule 19 (formals)


state 34

   20 formals: '(' formal_list . ')'
   23 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 45
    ','  shift, and go to state 46


state 35

   22 formal_list: formal .

    $default  reduce using rule 22 (formal_list)


state 36

   15 feature: OBJECTID formals ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 47


state 37

    7 class: CLASS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 7 (class)


state 38

   14 feature_list: feature_list error ';' .

    $default  reduce using rule 14 (feature_list)


state 39

   13 feature_list: feature_list feature ';' .

    $default  reduce using rule 13 (feature_list)


state 40

    8 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 48


state 41

   18 optional_initialization: ASSIGN . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 63


state 42

   16 feature: OBJECTID ':' TYPEID optional_initialization .

    $default  reduce using rule 16 (feature)


state 43

   21 formals: '(' error ')' .

    $default  reduce using rule 21 (formals)


state 44

   24 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 64


state 45

   20 formals: '(' formal_list ')' .

    $default  reduce using rule 20 (formals)


state 46

   23 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 32

    formal  go to state 65


state 47

   15 feature: OBJECTID formals ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 66


state 48

    8 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 8 (class)


state 49

   32 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 67


state 50

   35 expr: LET . let_list

    error     shift, and go to state 68
    OBJECTID  shift, and go to state 69

    let_list  go to state 70


state 51

   33 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 71


state 52

   36 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 72


state 53

   37 expr: NEW . TYPEID

    TYPEID  shift, and go to state 73


state 54

   38 expr: ISVOID . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 74


state 55

   50 expr: STR_CONST .

    $default  reduce using rule 50 (expr)


state 56

   49 expr: INT_CONST .

    $default  reduce using rule 49 (expr)


state 57

   51 expr: BOOL_CONST .

    $default  reduce using rule 51 (expr)


state 58

   29 expr: OBJECTID . ASSIGN expr
   52     | OBJECTID .
   53     | OBJECTID . actuals

    ASSIGN  shift, and go to state 75
    '('     shift, and go to state 76

    $default  reduce using rule 52 (expr)

    actuals  go to state 77


state 59

   47 expr: NOT . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 78


state 60

   43 expr: '~' . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 79


state 61

   34 expr: '{' . stmt_list '}'

    error       shift, and go to state 80
    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr       go to state 81
    stmt_list  go to state 82


state 62

   48 expr: '(' . expr ')'

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 83


state 63

   18 optional_initialization: ASSIGN expr .
   30 expr: expr . '@' TYPEID '.' OBJECTID actuals
   31     | expr . '.' OBJECTID actuals
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . '=' expr
   46     | expr . LE expr

    LE   shift, and go to state 84
    '<'  shift, and go to state 85
    '='  shift, and go to state 86
    '-'  shift, and go to state 87
    '+'  shift, and go to state 88
    '*'  shift, and go to state 89
    '/'  shift, and go to state 90
    '@'  shift, and go to state 91
    '.'  shift, and go to state 92

    $default  reduce using rule 18 (optional_initialization)


state 64

   24 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 24 (formal)


state 65

   23 formal_list: formal_list ',' formal .

    $default  reduce using rule 23 (formal_list)


state 66

   15 feature: OBJECTID formals ':' TYPEID '{' . expr '}'

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 93


state 67

   30 expr: expr . '@' TYPEID '.' OBJECTID actuals
   31     | expr . '.' OBJECTID actuals
   32     | IF expr . THEN expr ELSE expr FI
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . '=' expr
   46     | expr . LE expr

    THEN  shift, and go to state 94
    LE    shift, and go to state 84
    '<'   shift, and go to state 85
    '='   shift, and go to state 86
    '-'   shift, and go to state 87
    '+'   shift, and go to state 88
    '*'   shift, and go to state 89
    '/'   shift, and go to state 90
    '@'   shift, and go to state 91
    '.'   shift, and go to state 92


state 68

   26 let_list: error . IN expr
   28         | error . ',' let_list

    IN   shift, and go to state 95
    ','  shift, and go to state 96


state 69

   25 let_list: OBJECTID . ':' TYPEID optional_initialization IN expr
   27         | OBJECTID . ':' TYPEID optional_initialization ',' let_list

    ':'  shift, and go to state 97


state 70

   35 expr: LET let_list .

    $default  reduce using rule 35 (expr)


state 71

   30 expr: expr . '@' TYPEID '.' OBJECTID actuals
   31     | expr . '.' OBJECTID actuals
   33     | WHILE expr . LOOP expr POOL
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . '=' expr
   46     | expr . LE expr

    LOOP  shift, and go to state 98
    LE    shift, and go to state 84
    '<'   shift, and go to state 85
    '='   shift, and go to state 86
    '-'   shift, and go to state 87
    '+'   shift, and go to state 88
    '*'   shift, and go to state 89
    '/'   shift, and go to state 90
    '@'   shift, and go to state 91
    '.'   shift, and go to state 92


state 72

   30 expr: expr . '@' TYPEID '.' OBJECTID actuals
   31     | expr . '.' OBJECTID actuals
   36     | CASE expr . OF case_list ESAC
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . '=' expr
   46     | expr . LE expr

    OF   shift, and go to state 99
    LE   shift, and go to state 84
    '<'  shift, and go to state 85
    '='  shift, and go to state 86
    '-'  shift, and go to state 87
    '+'  shift, and go to state 88
    '*'  shift, and go to state 89
    '/'  shift, and go to state 90
    '@'  shift, and go to state 91
    '.'  shift, and go to state 92


state 73

   37 expr: NEW TYPEID .

    $default  reduce using rule 37 (expr)


state 74

   30 expr: expr . '@' TYPEID '.' OBJECTID actuals
   31     | expr . '.' OBJECTID actuals
   38     | ISVOID expr .
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . '=' expr
   46     | expr . LE expr

    '@'  shift, and go to state 91
    '.'  shift, and go to state 92

    $default  reduce using rule 38 (expr)


state 75

   29 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 100


state 76

   58 actuals: '(' . ')'
   59        | '(' . exp_list ')'

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62
    ')'         shift, and go to state 101

    expr      go to state 102
    exp_list  go to state 103


state 77

   53 expr: OBJECTID actuals .

    $default  reduce using rule 53 (expr)


state 78

   30 expr: expr . '@' TYPEID '.' OBJECTID actuals
   31     | expr . '.' OBJECTID actuals
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . '=' expr
   46     | expr . LE expr
   47     | NOT expr .

    LE   shift, and go to state 84
    '<'  shift, and go to state 85
    '='  shift, and go to state 86
    '-'  shift, and go to state 87
    '+'  shift, and go to state 88
    '*'  shift, and go to state 89
    '/'  shift, and go to state 90
    '@'  shift, and go to state 91
    '.'  shift, and go to state 92

    $default  reduce using rule 47 (expr)


state 79

   30 expr: expr . '@' TYPEID '.' OBJECTID actuals
   31     | expr . '.' OBJECTID actuals
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   43     | '~' expr .
   44     | expr . '<' expr
   45     | expr . '=' expr
   46     | expr . LE expr

    '@'  shift, and go to state 91
    '.'  shift, and go to state 92

    $default  reduce using rule 43 (expr)


state 80

   55 stmt_list: error . ';'

    ';'  shift, and go to state 104


state 81
